examples/test/testpolicy10217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10217
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key1: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value8
      podSelector:
        matchLabels:
          key7: value3
          key27: value10
          key15: value45
